--- a/dissertation.bib
+++ b/dissertation.bib
@@ -6598,4 +6598,17 @@ Adolescents are notorious for engaging in reward-seeking behaviors, a tendency a
   file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/JVQND3AN/Fisher et al. - 2018 - Lack of group-to-individual generalizability is a .pdf}
 }
 
+@article{bates2015,
+  title = {Fitting {{Linear Mixed}}-{{Effects Models Using}} Lme4},
+  volume = {67},
+  doi = {10.18637/jss.v067.i01},
+  number = {1},
+  journaltitle = {Journal of Statistical Software},
+  date = {2015},
+  pages = {1-48},
+  keywords = {_diss,Statistics - Computation},
+  author = {Bates, Douglas and Mächler, Martin and Bolker, Ben and Walker, Steve},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/NBWAU97L/Bates_et_al-2014-Fitting_Linear_Mixed-Effects_Models_using_lme4.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/CKTEIZRE/1406.html}
+}
+
 
