--- a/dissertation.bib
+++ b/dissertation.bib
@@ -5236,6 +5236,24 @@ CONCLUSIONS: These findings indicate that the emotional sequelae of puberty exte
   file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/753Y5H7W/Becht et al. - 2018 - Goal-Directed Correlates and Neurobiological Under.pdf}
 }
 
+@article{borsboom2006,
+  langid = {english},
+  title = {When {{Does Measurement Invariance Matter}}?},
+  volume = {44},
+  issn = {0025-7079},
+  url = {https://insights.ovid.com/crossref?an=00005650-200611001-00023},
+  doi = {10.1097/01.mlr.0000245143.08679.cc},
+  shorttitle = {When {{Does Measurement Invariance Matter}}?},
+  issue = {Suppl 3},
+  journaltitle = {Medical Care},
+  urldate = {2018-04-13},
+  date = {2006-11},
+  pages = {S176-S181},
+  keywords = {_diss},
+  author = {Borsboom, Denny},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/RSQLNYAJ/Borsboom - 2006 - When Does Measurement Invariance Matter.pdf}
+}
+
 @article{tymula2012,
   langid = {english},
   title = {Adolescents' Risk-Taking Behavior Is Driven by Tolerance to Ambiguity},
@@ -6606,9 +6624,43 @@ Adolescents are notorious for engaging in reward-seeking behaviors, a tendency a
   journaltitle = {Journal of Statistical Software},
   date = {2015},
   pages = {1-48},
-  keywords = {_diss,Statistics - Computation},
+  keywords = {Statistics - Computation,_diss},
   author = {Bates, Douglas and Mächler, Martin and Bolker, Ben and Walker, Steve},
   file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/NBWAU97L/Bates_et_al-2014-Fitting_Linear_Mixed-Effects_Models_using_lme4.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/CKTEIZRE/1406.html}
+}
+
+@article{collins2017,
+  langid = {english},
+  title = {The {{Cost}} of {{Structure Learning}}},
+  volume = {29},
+  issn = {0898-929X, 1530-8898},
+  url = {http://www.mitpressjournals.org/doi/abs/10.1162/jocn_a_01128},
+  doi = {10.1162/jocn_a_01128},
+  abstract = {Human learning is highly efficient and flexible. A key contributor to this learning flexibility is our ability to generalize new information across contexts that we know require the same behavior, and to transfer rules to new contexts we encounter. To do this, we structure the information we learn and represent it hierarchically as abstract, context-dependent rules, that constrain lower level stimulus-action-outcome contingencies. Previous research showed that humans create such structure even when it is not needed, presumably because it usually affords long-term generalization benefits. However, computational models predict that creating structure is costly, with slower learning and slower reaction times. We tested this prediction in a new behavioral experiment. Participants learned to select correct actions for four visual patterns, in a setting that either afforded (but did not promote) structure learning or enforced non-hierarchical learning, while controlling for the difficulty of the learning problem. Results replicated our previous finding that healthy young adults create structure even when unneeded, and that this structure affords later generalization. Furthermore, they supported our prediction that structure learning incurred a major learning cost, and that this cost was specifically tied to the effort in selecting abstract rules, leading to more errors when applying those rules. These findings confirm our theory that humans pay a high short-term cost in learning structure to enable longerterm benefits in learning flexibility.},
+  number = {10},
+  journaltitle = {Journal of Cognitive Neuroscience},
+  urldate = {2018-06-27},
+  date = {2017-10},
+  pages = {1646-1655},
+  author = {Collins, Anne G. E.},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/JA73GBYA/Collins - 2017 - The Cost of Structure Learning.pdf}
+}
+
+@article{collins2017a,
+  langid = {english},
+  title = {The {{Cost}} of {{Structure Learning}}},
+  volume = {29},
+  issn = {0898-929X, 1530-8898},
+  url = {http://www.mitpressjournals.org/doi/abs/10.1162/jocn_a_01128},
+  doi = {10.1162/jocn_a_01128},
+  abstract = {Human learning is highly efficient and flexible. A key contributor to this learning flexibility is our ability to generalize new information across contexts that we know require the same behavior, and to transfer rules to new contexts we encounter. To do this, we structure the information we learn and represent it hierarchically as abstract, context-dependent rules, that constrain lower level stimulus-action-outcome contingencies. Previous research showed that humans create such structure even when it is not needed, presumably because it usually affords long-term generalization benefits. However, computational models predict that creating structure is costly, with slower learning and slower reaction times. We tested this prediction in a new behavioral experiment. Participants learned to select correct actions for four visual patterns, in a setting that either afforded (but did not promote) structure learning or enforced non-hierarchical learning, while controlling for the difficulty of the learning problem. Results replicated our previous finding that healthy young adults create structure even when unneeded, and that this structure affords later generalization. Furthermore, they supported our prediction that structure learning incurred a major learning cost, and that this cost was specifically tied to the effort in selecting abstract rules, leading to more errors when applying those rules. These findings confirm our theory that humans pay a high short-term cost in learning structure to enable longerterm benefits in learning flexibility.},
+  number = {10},
+  journaltitle = {Journal of Cognitive Neuroscience},
+  urldate = {2018-07-02},
+  date = {2017-10},
+  pages = {1646-1655},
+  author = {Collins, Anne G. E.},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/DDNMU9CQ/Collins - 2017 - The Cost of Structure Learning.pdf}
 }
 
 
